优化 UI 细节与异常提示交互
- **悬浮窗修复**：修正 `OverlayWindow` 中网速上下行图标显示乱码的问题，统一使用箭头符号 (▼/▲)。
- **主页 UI 调整**：重构 `MainActivity` 中的服务错误卡片，优化按钮布局（右对齐）并将忽略按钮改为 `TextButton` 样式；新增“功能配置”分组标题以优化视觉层级。
- **文案修订**：更新中英文资源文件，细化通知与悬浮窗权限缺失的错误描述，移除冗余的 `error_service_title` 资源并规范标点符号。

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -12,6 +12,7 @@
     <string name="action_request_fix">修复</string>
     <string name="action_dismiss">忽略</string>
 
+    <string name="title_feature_config">功能配置</string>
     <string name="config_enable_overlay">启用悬浮窗</string>
     <string name="config_enable_overlay_desc">显示桌面悬浮窗</string>
     <string name="config_lock_overlay">锁定悬浮窗</string>
@@ -21,10 +22,9 @@
     <string name="config_enable_live_update">启用实时更新</string>
     <string name="config_enable_live_update_desc">使用实时网速更新通知栏</string>
 
-    <string name="error_service_title">服务错误</string>
     <string name="error_unknown">未知错误</string>
-    <string name="error_notification_permission">需要授予通知权限</string>
-    <string name="error_overlay_permission">悬浮窗需要显示在其他应用上层的权限</string>
+    <string name="error_notification_permission">启用通知需要授予“通知权限”</string>
+    <string name="error_overlay_permission">启用悬浮窗需要“显示在其他应用上层”的权限</string>
     <string name="error_service_start_failed">启动服务失败: %1$s</string>
 
     <string name="notification_channel_name">网速显示服务</string>
