优化构建配置与 CI 发布流程
- **混淆规则配置**：重写 `proguard-rules.pro`，添加 Android 组件保持规则，排除 `androidx.window` 警告，并保留核心业务包 `vip.mystery0.pixel.meter`。
- **CI 流程升级**：更新 GitHub Actions workflow，升级 bundletool 至 1.18.3，新增 Universal APK 生成与签名逻辑，实现 AAB 与 APK 双重发布。
- **构建脚本调整**：启用 Release 模式下的代码混淆 (`isMinifyEnabled`) 与资源压缩 (`isShrinkResources`)，修正签名配置引用。
- **权限清理**：移除 `AndroidManifest.xml` 中冗余的 `PACKAGE_USAGE_STATS` 权限声明。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PixelMeter</string>
+    <string name="app_name" translatable="false">Pixel Meter</string>
     <string name="title_configuration">Configuration</string>
     <string name="title_monitor_control">Monitor Control</string>
     <string name="label_total_speed">Total Speed</string>
